# uVault

./: .gitignore  dependency-reduced-pom.xml  pom.xml
src/backend/: Cargo.toml
src/backend/src/: lib.rs
src/linkage/: org_undefined_uvault_UVaultMain.h
src/main/java/: module-info.java
src/main/java/org/undefined/uvault/: UVaultMain.java
src/main/java/org/undefined/uvault/pages/: AuthenticationController.java  NewVaultController.java  VaultListController.java
src/main/resources/org/undefined/uvault/: authenticate.fxml  create_new_vault.fxml  save_sync_key.fxml  vault.fxml  vault_list.fxml  vault_list_item.fxml
