[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
chbs = "0.1.1"
libc = "0.2.147"
secrecy = "0.8.0"
serde = { version = "1.0.183", features = ["derive"] } 
sodiumoxide = "0.2.7"
jni = "0.17.0"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
dirs = "5.0.1"
